refactor: 스웨거 환경변수 설정